fix: some styling, spacing in filter

--- a/src/app/modules/engineers/components/engineers/engineers.component.scss
+++ b/src/app/modules/engineers/components/engineers/engineers.component.scss
@@ -45,9 +45,9 @@ article{
   line-height: 28px;
 }
 
-// .form-check{
-//   padding-left: 0;
-// }
+.form-check{
+  margin-bottom: 0.6rem;
+}
   .form-check-label{
   color: rgb(43, 63, 95);
   }
